    void checkIfQhullRan();
    void errorAnotherUser();
    void startQhullAccess();
    void stopQhullAccess();
 - PointCoordinatesIterator
 - PointCoordinates_test, RboxPoints
 - Cleanup PointCoordinates with conversions, etc
 - Redo Coordinates w/o vector<>
 - Change #include to specific -> general
 - Remove class-static code, check K_GLOBAL_STATIC

qhull 2009.1  2008/03/20
 - Added user_eg3 as an example of Qhull.cpp
 - Renamed html/qh-in.htm to html/qh-code.htm
 - Report not enough points if d points, Delaunay, and not Qz
 - Multithreaded -- call largest dimension for infinityPoint() and origin()
 - Oh... Ztotcheck, btw, I had to add to the statistics enum in the qh_KEEPstatistics=0 case in stat.h; otherwise stat.c gets an undefined symbol error. [R. Gardener]
 - qh_restore_qhull() zeroes out qh.old_qhstat and qh.old_tempstack.  Ownership moved.
 - Removed qh.old_stat -- never used
 - Removed qhmem.curlong.  qa_memfreeshort computes curlong from cntlong and cntfree
 - Rewrote save_qhull/restore_qhull
 - Add message code to error messages and warnings (e.g., QH6012)
 - Renamed qh.coplanarset to coplanarfacetset.  Avoids conflict with facetT.coplanarset
 - Fixed double-free of facet->centrum for triangulated facets
 - Removed qh_clearcenters from qh_freeqhull.  Duplicated by qh_delfacet
 - Added full tracing for short memory allocations.
 - Memory tracing (T5) redone for sort order by object
 - Fixed qhmem.totshort (total short memory in use)
 - Fixed parentheses around warning for missing 'Qc' [qh_initqhull_outputflags]
 - Added qhmem.totfree (total short memory on freelists)
 -    Increases size of qh_memalloc_ and qh_memfree_
 - Added qhmem.totdropped (leftover freesize at end of each short buffer)
 - Added qhmem.totunused (short size - request size)
 - Added qhmem.totbuffer (total short memory buffer w/o links)
 - Added memory statistics to qh_NOmem;
 - Added qh_memtotal to track allocated memory